--- a/signup.html
+++ b/signup.html
@@ -44,9 +44,7 @@
     </header>
 
     <!--Main Content-->
-    <main>
-        <section id="hero"></section>
-    </main>
+    <main>Main Content</main>
 
     <!--Footer-->
     <footer>
