--- a/index.html
+++ b/index.html
@@ -98,38 +98,38 @@
             </div>
         </section>
         <section id="meetup">
-            <h2>Meet-up Times</h2>
+            <h2 class="hide_heading" style="display: none;">Meet-up Times</h2>
             <div id="times">
                 <div>
-                    <h3>urban</h3>
+                    <h3>urban<i class="fa-solid fa-city"></i></h3>
                     <p>Monday</p>
                     <p>5k</p>
                     <p>The market hotel</p>
                     <p>18:30</p>
                 </div>
                 <div>
-                    <h3>trail</h3>
+                    <h3>trail<i class="fa-solid fa-tree"></i></h3>
                     <p>Wednesday</p>
                     <p>10k</p>
                     <p>Beach</p>
                     <p>6:30</p>
                 </div>
                 <div>
-                    <h3>urban</h3>
+                    <h3>urban<i class="fa-solid fa-city"></i></h3>
                     <p>Friday</p>
                     <p>10k</p>
                     <p>Mall</p>
                     <p>8:00</p>
                 </div>
                 <div>
-                    <h3>trail</h3>
+                    <h3>trail<i class="fa-solid fa-tree"></i></h3>
                     <p>Saturday</p>
                     <p>10k</p>
                     <p>Market Place</p>
                     <p>17:00</p>
                 </div>
                 <div>
-                    <h3>coffee</h3>
+                    <h3>coffee<i class="fa-solid fa-mug-hot"></i></h3>
                     <p>Sunday</p>
                     <p>10k</p>
                     <p>Hotel</p>
