--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,28 @@
     </header>
 
     <!--Main Content-->
-    <main>Main Content</main>
+    <main>
+        <section id="signup">
+            <form id="signup-form" action="http.formdump.codeinstitute.net" method="post">
+                <h2><i class="fa-solid fa-heartbeat"></i>Lets get you sign up!</h2><br>
+                <label for="first-name">First Name</label>
+                <input class="text-input" type="text" name="first_name" id="first-name" required><br>
+                <label for="last-name">Last Name</label>
+                <input class="text-input" type="text" name="last_name" id="last-name" required><br>
+                <label for="email-address">Email Address</label>
+                <input class="text-input" type="email" name="email_address" id="email-address" required><br>
+                <div class="radio-buttons">
+                    <label for="road">Road</label>
+                    <input type="radio" name="running-preference" id="road" required><br>
+                    <label for="trail">Trail</label>
+                    <input type="radio" name="running-preference" id="trail" required><br>
+                    <label for="both">Both</label>
+                    <input type="radio" name="running-preference" id="both" required><br>
+                </div>
+                <input class="join-button" type="submit" value="Let's Run!">
+            </form>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
